// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complete should complete with confirm 1`] = `
Array [
  Array [
    ConfirmResult {
      "additionalAction": null,
      "isConfirmed": true,
    },
  ],
]
`;

exports[`complete should complete with decline 1`] = `
Array [
  Array [
    ConfirmResult {
      "additionalAction": null,
      "isConfirmed": false,
    },
  ],
]
`;

exports[`complete should confirm with additional action 1`] = `
Array [
  Array [
    ConfirmResult {
      "additionalAction": Object {
        "value": true,
      },
      "isConfirmed": true,
    },
  ],
]
`;
